<resources>
    <string name="app_name">Acorn</string>
    <string name="app_caption">Explore · Consume · Store</string>
    <string name="separator">·</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_trending">Trending</string>
    <string name="nav_deals">Deals</string>
    <string name="nav_saved">Saved Articles</string>
    <string name="nav_nearby">Near Me</string>
    <string name="nav_video_feed">Videos</string>
    <string name="nav_subscriptions">Subscriptions</string>
    <string name="nav_themes">Edit Subscribed Themes</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_login">Sign In</string>
    <string name="nav_invite">Share App Invite</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_share_app">Share App Invite</string>
    <string name="action_expand">Expand Article</string>
    <string name="action_follow">Follow Article</string>
    <string name="action_unfollow">Unfollow Article</string>
    <string name="action_search_up">Find Up</string>
    <string name="action_search_down">Find Down</string>
    <string name="action_filter">Filter</string>
    <string name="search_hint">Search articles…</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="sign_in_no_connection">No internet connection</string>
    <string name="sign_in_error">Sign in error. Please try again.</string>
    <string name="card_theme_others">General</string>
    <string name="action_report_post">"Report post"</string>
    <string name="pref_activity_title">Settings</string>
    <string name="pref_key_night_mode">nightModePref</string>
    <string name="pref_key_edit_themes">editThemesPref</string>
    <string name="pref_key_notif_comment">commentNotifPref</string>
    <string name="pref_key_notif_article">articleNotifPref</string>
    <string name="pref_key_notif_deals">dealsNotifPref</string>
    <string name="pref_key_notif_saved_articles_reminder">savedArticlesReminderNotifPref</string>
    <string name="pref_key_notif_location">locationNotifPref</string>
    <string name="pref_key_feed_videos">videosInFeed</string>
    <string name="pref_key_feed_videos_channels">videosInFeedChannelsToRemove</string>
    <string name="pref_key_loc_permissions_asked">locationPermissionsRequestedPref</string>
    <string name="pref_cat_general_settings">GENERAL</string>
    <string name="pref_cat_notif_settings">NOTIFICATIONS</string>
    <string name="pref_cat_feed_settings">FEED</string>
    <string name="pref_cat_user_account_settings">MANAGE ACCOUNT</string>
    <string name="pref_title_night_mode_checkbox">Night mode</string>
    <string name="pref_title_edit_themes_pref">Edit subscribed themes</string>
    <string name="pref_title_notif_comment">Comment notifications</string>
    <string name="pref_title_notif_article">Recommended articles</string>
    <string name="pref_title_notif_deals">Recommended deals</string>
    <string name="pref_title_notif_saved_articles_reminder">Saved articles reminder</string>
    <string name="pref_title_notif_location">Location based notifications</string>
    <string name="pref_title_feed_videos">Show videos in feed</string>
    <string name="pref_title_feed_videos_channels">Channels removed</string>
    <string name="pref_title_change_password">Change password</string>
    <string name="pref_title_change_email">Change email address</string>
    <string name="pref_title_delete_account">Delete account</string>
    <string name="helper_nearby_seen">nearbySeenPref</string>
    <string name="helper_saved_seen">savedSeenPref</string>
    <string name="helper_remove_video_seen">removeVideoSeen</string>
    <string name="helper_user_details_seen">userDetailsSeen</string>
    <string name="facebook_application_id" translatable="false">120640472147728</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb120640472147728</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="dialog_recent_text">Recent</string>
    <string name="dialog_trending_text">Trending</string>
    <string name="dialog_subscriptions_text">Subscriptions</string>
    <string name="dialog_saved_text">Saved articles</string>
    <string name="dialog_exit_text">Exit app</string>
    <string name="theme_title">Select themes</string>
    <string name="theme_save">Save</string>
    <string name="theme_all">All themes</string>
    <string name="theme_0">Please select</string>
    <string name="theme_1">News and Current Affairs</string>
    <string name="theme_2">Lifestyle</string>
    <string name="theme_3">Food</string>
    <string name="theme_4">Travel</string>
    <string name="theme_5">Deals</string>
    <string name="theme_6">Personal Finance</string>
    <string name="theme_7">Housing</string>
    <string name="theme_8">Parenting</string>
    <string name="theme_9">Beauty and Fashion</string>
    <string name="theme_10">Investing</string>
    <string name="theme_11">Innovation</string>
    <string name="comment_notification_channel_id" translatable="false">fcm_comment_channel</string>
    <string name="comment_notification_channel_name" translatable="true">Comments</string>
    <string name="manual_article_notification_channel_id" translatable="false">fcm_manual_article_channel</string>
    <string name="manual_article_notification_channel_name" translatable="true">Manual Article</string>
    <string name="saved_reminder_notification_channel_id" translatable="false">fcm_saved_reminder_channel</string>
    <string name="saved_reminder_notification_channel_name" translatable="true">Saved Article Reminder</string>
    <string name="article_notification_channel_id" translatable="false">fcm_article_channel</string>
    <string name="article_notification_channel_name" translatable="true">Recommended Articles</string>
    <string name="deals_notification_channel_id" translatable="false">fcm_deals_channel</string>
    <string name="deals_notification_channel_name" translatable="true">Recommended Deals</string>
    <string name="geofence_notification_channel_id" translatable="false">location_mrt_channel</string>
    <string name="geofence_notification_channel_name" translatable="true">Location MRT</string>
    <string name="promotion_notification_channel_id" translatable="false">fcm_promotion_channel</string>
    <string name="promotion_notification_channel_name" translatable="true">Promotion</string>
    <string name="notif_clear_button">Clear all</string>
    <string name="notif_empty_text">You have no new notifications!</string>
    <string name="notif_delete">DELETE</string>
    <string name="notif_pref_id">notificationsPref</string>
    <string name="notif_pref_key">key</string>
    <string name="notif_pref_value">value</string>
    <string name="notif_pref_c_text">comments_text</string>
    <string name="preview_text_hint">Add caption for image</string>
    <string name="post_send">Post</string>
    <string name="post_text_hint">Write something…</string>
    <string name="post_theme_title">Theme</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_dwelled">Dwelled</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="smaato_publisher_id">1100044060</string>
    <string name="smaato_banner_main_ad_space_id">130692916</string>
    <string name="smaato_banner_webview_ad_space_id">130692934</string>
    <string name="smaato_native_ad_space_id">130692917</string>
    <string name="admob_app_id">ca-app-pub-9396779536944241~1758927432</string>
    <string name="admob_test_adunit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_main_adunit_id">ca-app-pub-9396779536944241/2530302172</string>
    <string name="admob_banner_webview_adunit_id">ca-app-pub-9396779536944241/3171825223</string>
    <string name="admob_native_adunit_id">ca-app-pub-9396779536944241/3339346182</string>
    <string name="fb_native_ad_placement_id">2986109434738272_2986116248070924</string>
    <string name="fb_banner_main_ad_placement_id">2986109434738272_2988081624541053</string>
    <string name="fb_banner_webview_ad_placement_id">2986109434738272_2988088681207014</string>
</resources>