<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_notifications"
        android:orderInCategory="2"
        android:title="@string/action_notifications"
        app:actionLayout="@layout/layout_notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="3"
        android:title="@string/action_share_app"
        app:showAsAction="never" />
</menu>
