<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_expand"
        android:orderInCategory="1"
        android:title="@string/action_expand"
        android:icon="@drawable/chevron_up"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_search_up"
        android:orderInCategory="3"
        android:title="@string/action_expand"
        android:icon="@drawable/chevron_up"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_search_down"
        android:orderInCategory="4"
        android:title="@string/action_expand"
        android:icon="@drawable/chevron_down"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_follow"
        android:orderInCategory="99"
        android:title="@string/action_follow"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unfollow"
        android:orderInCategory="100"
        android:title="@string/action_unfollow"
        app:showAsAction="never"
        android:visible="false"/>
</menu>