<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/theme_ctl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="80dp"
            app:expandedTitleGravity="center_horizontal|bottom"
            android:elevation="4dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <android.support.v7.widget.CardView
                    android:id="@+id/theme_all"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    android:fitsSystemWindows="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <CheckBox
                        android:id="@+id/theme_all_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_gravity="center_vertical"
                        android:checked="true"
                        android:buttonTint="@color/theme_all_button_tint"
                        android:text="@string/theme_all"
                        android:textColor="@color/card_text_color"
                        android:textSize="@dimen/font_size_medium"/>

                </android.support.v7.widget.CardView>
            </android.support.constraint.ConstraintLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:title="@string/theme_title"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/theme_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/theme_saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_rectangle_large"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hapticFeedbackEnabled="true"
            android:foreground="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/theme_save"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/nav_view_background"/>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>